<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>xyz.derkades</groupId>
	<artifactId>ServerSelectorX</artifactId>
	<version>3.6.1-legacy-beta</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<build>
		<sourceDirectory>src</sourceDirectory>

		<resources>
			<resource>
				<directory>resources/</directory>
				<filtering>true</filtering>
			</resource>
		</resources>

		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.4</version>
				<configuration>
					<createDependencyReducedPom>false</createDependencyReducedPom>
					<minimizeJar>true</minimizeJar>

					<relocations>
						<relocation>
							<pattern>org.bstats</pattern>
							<shadedPattern>xyz.derkades.serverselectorx.lib.bstats</shadedPattern>
						</relocation>
						<relocation>
							<pattern>org.apache.commons.lang3</pattern>
							<shadedPattern>xyz.derkades.serverselectorx.lib.commons-lang3</shadedPattern>
						</relocation>
						<relocation>
							<pattern>xyz.derkades.derkutils</pattern>
							<shadedPattern>xyz.derkades.serverselectorx.lib.derkutils</shadedPattern>
						</relocation>
						<relocation>
							<pattern>com.google.gson</pattern>
							<shadedPattern>xyz.derkades.serverselectorx.lib.gson</shadedPattern>
						</relocation>
					</relocations>

					<filters>
						<filter>
							<artifact>*:*</artifact>
							<excludes>
								<exclude>META-INF/</exclude>
								<exclude>LICENSE.txt</exclude>
								<exclude>junit/</exclude>
								<exclude>org/junit/</exclude>
							</excludes>
						</filter>
					</filters>
				</configuration>
			</plugin>

		</plugins>
	</build>

	<dependencies>

		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>1.9-R0.1-SNAPSHOT</version> <!-- 1.9 is required to get the offhand switch event -->
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>xyz.derkades</groupId>
			<artifactId>Derkutils</artifactId>
			<version>legacy</version>
		</dependency>

		<dependency>
			<groupId>org.bstats</groupId>
			<artifactId>bstats-bukkit</artifactId>
			<version>2.2.1</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>me.clip</groupId>
			<artifactId>placeholderapi</artifactId>
			<version>2.10.9</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.6</version>
		</dependency>

	</dependencies>

	<repositories>

		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>

		<repository>
			<id>placeholderapi</id>
			<url>http://repo.extendedclip.com/content/repositories/placeholderapi/</url>
		</repository>

	</repositories>

</project>
